--- a/instructions.html
+++ b/instructions.html
@@ -46,12 +46,12 @@
   <div class='col-md-9'>
     <header>
       <h1>
-        Welcome to the UC Berkeley Clinical Research Center Tear Aqueous Production Study Website
+        Welcome to the UC Berkeley Clinical Research Center Tear Aqueous Production Rate Website
       </h1>
     </header>
     
 
-<p>Hello and welcome to the University of California, Berkeley Clinical Research Center’s Tear Aqueous Production Study website! This website is meant to provide information on the study and detail how to collect data in your office setting.</p>
+<p>Hello and welcome to the University of California, Berkeley Clinical Research Center’s Tear Aqueous Production Rate website! This website is meant to provide information on production rate and detail how to collect data in your office setting.</p>
 
 <p>Unlike normal clinical Schirmer testing, this modified Schirmer test has specific steps and procedures that must be followed to prepare the strips and record data. Please scroll down and watch the videos, then continue to follow the step-by-step guide on preparing the Schirmer strips and collecting data.</p>
 
