--- a/instructions.html
+++ b/instructions.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mono-blue.css">
     <link rel="icon" href="images/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+
 
     
 
