--- a/basic.html
+++ b/basic.html
@@ -333,6 +333,18 @@
         //     window.myLine.update();
         // });
     </script>
+    <script>
+       if ('serviceWorker' in navigator) {
+         navigator.serviceWorker.register('/service-worker.js')
+         .then(registration => {
+           console.log('Service Worker registered with scope:', registration.scope);
+         })
+         .catch(error => {
+           console.log('Service Worker registration failed:', error);
+         });
+       }
+   </script>
+ 
 </body>
 
 </html>
