--- a/index.html
+++ b/index.html
@@ -401,18 +401,22 @@
         //     window.myLine.update();
         // });
     </script>
-    <script>
-       if ('serviceWorker' in navigator) {
-         navigator.serviceWorker.register('/service-worker.js')
-         .then(registration => {
-           console.log('Service Worker registered with scope:', registration.scope);
-         })
-         .catch(error => {
-           console.log('Service Worker registration failed:', error);
-         });
-       }
-    </script>
 
 </body>
+
+<script>
+  // Check if service workers are supported
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(registration => {
+          console.log('ServiceWorker registered with scope:', registration.scope);
+        })
+        .catch(error => {
+          console.log('ServiceWorker registration failed:', error);
+        });
+    });
+  }
+</script>
 
 </html>
