--- a/instructions.html
+++ b/instructions.html
@@ -329,18 +329,23 @@
     }
   });
 </script>
-<script>
+  
+  </body>
+
+  <script>
+  // Check if service workers are supported
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-    .then(registration => {
-      console.log('Service Worker registered with scope:', registration.scope);
-    })
-    .catch(error => {
-      console.log('Service Worker registration failed:', error);
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(registration => {
+          console.log('ServiceWorker registered with scope:', registration.scope);
+        })
+        .catch(error => {
+          console.log('ServiceWorker registration failed:', error);
+        });
     });
   }
 </script>
 
-
-  </body>
+  
 </html>
